[workspace]
resolver = "2"
members  = ["nft_collection", "plan_registry", "marketplace"]

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
soroban-sdk = { version = "22" }

# ── Release profile: minimise WASM size ──────────────────────────────────────
[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true
